@@ -207,80 +207,62 @@ public class AcEquationSystemCreator {
         List<T> controllerElements = voltageControl.getMergedControllerElements()
                 .stream()
                 .filter(b -> !b.isDisabled()) // discard disabled controller elements
-                .collect(Collectors.toList());
+                .toList();
 
         Equation<AcVariableType, AcEquationType> vEq = equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_V)
                 .orElseThrow();
 
         List<Equation<AcVariableType, AcEquationType>> vEqMergedList = voltageControl.getMergedDependentVoltageControls().stream()
                 .map(vc -> equationSystem.getEquation(vc.getControlledBus().getNum(), AcEquationType.BUS_TARGET_V).orElseThrow())
-                .collect(Collectors.toList());
+                .toList();
 
-        if (controlledBus.isDisabled() || voltageControl.isDisabledAndAlsoAllItsDependentVoltageControls()) {
-            // we disable all voltage control equations
-            vEq.setActive(false);
+        if (voltageControl.isHidden()) {
+            voltageControl.findMainVisibleControlledBus().ifPresentOrElse(mainVisibleControlledBus -> {
+                if (mainVisibleControlledBus != voltageControl.getControlledBus()) {
+                    vEq.setActive(false);
+                }
+            }, () -> vEq.setActive(false));
             for (T controllerElement : controllerElements) {
                 equationSystem.getEquation(controllerElement.getNum(), distrEqType)
-                        .orElseThrow()
-                        .setActive(false);
+                        .ifPresent(eq -> eq.setActive(false));
                 equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
                         .orElseThrow()
                         .setActive(true);
             }
         } else {
-            if (voltageControl.isHidden()) {
-                for (T controllerElement : controllerElements) {
-                    equationSystem.getEquation(controllerElement.getNum(), distrEqType)
-                            .orElseThrow()
-                            .setActive(false);
-                    equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
-                            .orElseThrow()
-                            .setActive(true);
-                }
-            } else {
-                List<T> enabledControllerElements = controllerElements.stream()
-                        .filter(voltageControl::isControllerEnabled).collect(Collectors.toList());
-                List<T> disabledControllerElements = controllerElements.stream()
-                        .filter(Predicate.not(voltageControl::isControllerEnabled)).collect(Collectors.toList());
+            List<T> enabledControllerElements = controllerElements.stream()
+                    .filter(voltageControl::isControllerEnabled).toList();
+            List<T> disabledControllerElements = controllerElements.stream()
+                    .filter(Predicate.not(voltageControl::isControllerEnabled)).toList();
 
-                // activate voltage control at controlled bus only if at least one controller element is enabled
-                vEq.setActive(!enabledControllerElements.isEmpty());
+            // activate voltage control at controlled bus only if at least one controller element is enabled
+            vEq.setActive(!enabledControllerElements.isEmpty());
 
-                // deactivate voltage control for merged controlled buses
-                for (var vEqMerged : vEqMergedList) {
-                    vEqMerged.setActive(false);
-                }
+            // deactivate voltage control for merged controlled buses
+            for (var vEqMerged : vEqMergedList) {
+                vEqMerged.setActive(false);
+            }
 
-                // deactivate distribution equations and reactivate control equations
-                for (T controllerElement : disabledControllerElements) {
-                    equationSystem.getEquation(controllerElement.getNum(), distrEqType)
-                            .orElseThrow()
-                            .setActive(false);
-                    equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
-                            .orElseThrow()
-                            .setActive(true);
-                }
+            // deactivate distribution equations and reactivate control equations
+            for (T controllerElement : disabledControllerElements) {
+                equationSystem.getEquation(controllerElement.getNum(), distrEqType)
+                        .ifPresent(eq -> eq.setActive(false));
+                equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
+                        .orElseThrow()
+                        .setActive(true);
+            }
 
-                // activate distribution equation and deactivate control equation at all enabled controller buses except one (first)
-                for (int i = 0; i < enabledControllerElements.size(); i++) {
-                    boolean active = i != 0;
-                    T controllerElement = enabledControllerElements.get(i);
-                    equationSystem.getEquation(controllerElement.getNum(), distrEqType)
-                            .orElseThrow()
-                            .setActive(active);
-                    equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
-                            .orElseThrow()
-                            .setActive(false);
-                }
+            // activate distribution equation and deactivate control equation at all enabled controller buses except one (first)
+            for (int i = 0; i < enabledControllerElements.size(); i++) {
+                boolean active = i != 0;
+                T controllerElement = enabledControllerElements.get(i);
+                equationSystem.getEquation(controllerElement.getNum(), distrEqType)
+                        .ifPresent(eq -> eq.setActive(active));
+                equationSystem.getEquation(controllerElement.getNum(), ctrlEqType)
+                        .orElseThrow()
+                        .setActive(false);
             }
         }
-    }
-
-    static void updateRemoteGeneratorVoltageControlEquations(GeneratorVoltageControl voltageControl, EquationSystem<AcVariableType, AcEquationType> equationSystem) {
-        // ensure reactive keys are up-to-date
-        voltageControl.updateReactiveKeys();
-
-        updateRemoteVoltageControlEquations(voltageControl, equationSystem, AcEquationType.DISTR_Q, AcEquationType.BUS_TARGET_Q);
     }
 
     private static List<EquationTerm<AcVariableType, AcEquationType>> createReactiveTerms(LfBus controllerBus,
@@ -327,27 +309,11 @@ public class AcEquationSystemCreator {
 
     public static void updateGeneratorVoltageControl(GeneratorVoltageControl voltageControl, EquationSystem<AcVariableType, AcEquationType> equationSystem) {
         checkNotDependentVoltageControl(voltageControl);
-        LfBus controlledBus = voltageControl.getControlledBus();
-        if (voltageControl.isLocalControl()) {
-            if (voltageControl.isHidden()) {
-                // FIXME: a hidden generator voltage control means a disabled controller(/ed) bus for the moment.
-                equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_V)
-                        .orElseThrow()
-                        .setActive(false);
-                equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_Q)
-                        .orElseThrow()
-                        .setActive(false);
-            } else {
-                equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_V)
-                        .orElseThrow()
-                        .setActive(controlledBus.isGeneratorVoltageControlEnabled());
-                equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_Q)
-                        .orElseThrow()
-                        .setActive(!controlledBus.isGeneratorVoltageControlEnabled());
-            }
-        } else {
-            updateRemoteGeneratorVoltageControlEquations(voltageControl, equationSystem);
-        }
+
+        // ensure reactive keys are up-to-date
+        voltageControl.updateReactiveKeys();
+
+        updateRemoteVoltageControlEquations(voltageControl, equationSystem, AcEquationType.DISTR_Q, AcEquationType.BUS_TARGET_Q);
     }
 
     private static <T extends LfElement> void checkNotDependentVoltageControl(VoltageControl<T> voltageControl) {
